Centered Content using flex display / justify-content: center & Justify-content: space-between;

--- a/index.html
+++ b/index.html
@@ -22,19 +22,21 @@
     </div>
 
     <div>
-        <img  src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="The Google Logo">
+        <img id="google-img" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="The Google Logo">
     </div>
+
     <div>
-        <form>
+        <form id="google-index-form">
             <input type="text">
         </form>
     </div>
-    <div>
 
+
+    <div class="buttons-index">
+        <button>Google Search </button>
+        <button>I'm Feeling Lucky</button>
     </div>
-        <button> Google Search </button>
-        <button> I'm Feeling Lucky</button>
-    </div>
+
 
 </body>
 
